# pypirun

./: .coveragerc  .gitignore  .pylintrc  LICENSE  PULL_REQUEST_TEMPLATE.md  README.md  pyproject.toml  screwdriver.yaml  setup.cfg  setup.py  tox.ini
sd-cmd/: pypirun.sh  sd-command.yaml
src/pypirun/: __init__.py  __main__.py  arguments.py  cli.py  utility.py
tests/: test_arguments.py  test_cli.py  test_import.py  test_utility.py
