[metadata]
author = Verizon Media Python Platform Team
author_email = 254983+dwighthubbard@users.noreply.github.com
classifiers = 
	Development Status :: 5 - Production/Stable
	Intended Audience :: Developers
	License :: OSI Approved :: BSD License
	Programming Language :: Python :: 3 :: Only
	Programming Language :: Python :: 3.6
	Programming Language :: Python :: 3.7
	Programming Language :: Python :: 3.8
description = Command line utility to run a command, installing needed python packages if it is not installed
keywords = python virtualenv pypi cli
license = BSD License
license_file = LICENSE
long_description = file:README.md
long_description_content_type = text/markdown
name = pypirun
url = https://github.com/yahoo/pypirun
version = 1.1.160960

[options]
packages = 
	pypirun
package_dir = 
	=src
python_requires = >="3.6"
zip_safe = True

[options.entry_points]
console_scripts = 
	pypirun=pypirun.cli:main
	pypirun_true=pypirun.cli:exit_ok

[screwdrivercd.version]
version_type = sdv4_SD_BUILD

